@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html lang="en-us">
 
 <head>
     <meta charset="utf-8">
